src/test/deca/context/valid/created/affichage/print_var_INT.deca
// Description:
//  affiche variable int
// Resultats :
// 		OK

{
   int x = 3;
   println(x);
}
