src/test/deca/context/invalid/created/affichage/print_var_BOOLEAN.deca
// Description:
//  Affiche boolean
// 
// Resultats:
//    Ligne 10 : Error expr should be Int, Float or String


{
   boolean x = true;
   println(x);
}
